Disable horizontal scrolling, fix header width, get rid of unnecessary console.log

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -8,7 +8,8 @@
 @import url('https://fonts.googleapis.com/css?family=Oleo+Script&display=swap');
 
 html {
-  background-color: #FBFBFB
+  background-color: #FBFBFB;
+  overflow-x: hidden !important
 }
 
 .pageTitle: {
